--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -12,3 +12,7 @@ msgstr ""
 "Last-Translator: \n"
 "Language-Team: \n"
 "Plural-Forms: \n"
+
+#: src/App.tsx:4
+msgid "Performance Review"
+msgstr "ارزیابی عملکرد"
