chore: add review component and its story

--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -26,3 +26,7 @@ msgstr "Performance Review"
 #: src/core/locales/languages.ts:4
 msgid "Persian"
 msgstr "فارسی"
+
+#: src/shared/review/Review.tsx:28
+msgid "Select"
+msgstr "Select"
