--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -26,3 +26,7 @@ msgstr "ارزیابی عملکرد"
 #: src/core/locales/languages.ts:4
 msgid "Persian"
 msgstr "فارسی"
+
+#: src/shared/review/Review.tsx:28
+msgid "Select"
+msgstr "انتخاب کنید"
