--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -17,7 +17,15 @@ msgstr ""
 msgid "English"
 msgstr "English"
 
-#: src/containers/main/MainContainer.tsx:10
+#: src/pages/auth/Login.tsx:42
+msgid "Login"
+msgstr "Login"
+
+#: src/pages/auth/LoginForm.tsx:14
+msgid "Password"
+msgstr "Password"
+
+#: src/containers/main/MainContainer.tsx:13
 #: src/pages/dashboard-page/DashboardPage.tsx:6
 #: src/shared/layouts/dashboard-layouts/DashboardLayout.stories.tsx:28
 msgid "Performance Review"
@@ -27,6 +35,18 @@ msgstr "Performance Review"
 msgid "Persian"
 msgstr "فارسی"
 
-#: src/shared/review/Review.tsx:28
+#: src/shared/criterion-item/CriterionItem.tsx:14
 msgid "Select"
 msgstr "Select"
+
+#: src/pages/auth/LoginForm.tsx:19
+msgid "Submit"
+msgstr "Submit"
+
+#: src/pages/auth/LoginForm.tsx:11
+msgid "Username"
+msgstr "Username"
+
+#: src/pages/auth/Login.tsx:31
+msgid "Username or Password is incorrect."
+msgstr "Username or Password is incorrect."
