--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -17,7 +17,15 @@ msgstr ""
 msgid "English"
 msgstr "English"
 
-#: src/containers/main/MainContainer.tsx:10
+#: src/pages/auth/Login.tsx:42
+msgid "Login"
+msgstr "ورود"
+
+#: src/pages/auth/LoginForm.tsx:14
+msgid "Password"
+msgstr "گذرواژه"
+
+#: src/containers/main/MainContainer.tsx:13
 #: src/pages/dashboard-page/DashboardPage.tsx:6
 #: src/shared/layouts/dashboard-layouts/DashboardLayout.stories.tsx:28
 msgid "Performance Review"
@@ -27,6 +35,18 @@ msgstr "ارزیابی عملکرد"
 msgid "Persian"
 msgstr "فارسی"
 
-#: src/shared/review/Review.tsx:28
+#: src/shared/criterion-item/CriterionItem.tsx:14
 msgid "Select"
 msgstr "انتخاب کنید"
+
+#: src/pages/auth/LoginForm.tsx:19
+msgid "Submit"
+msgstr "ثبت"
+
+#: src/pages/auth/LoginForm.tsx:11
+msgid "Username"
+msgstr "نام کاربری"
+
+#: src/pages/auth/Login.tsx:31
+msgid "Username or Password is incorrect."
+msgstr "نام کاربری یا گذرواژه اشتباه است."
