--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -13,6 +13,10 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
+#: src/shared/strengths-weaknesses/StrengthsOrWeaknesses.tsx:41
+msgid "Add"
+msgstr "Add"
+
 #: src/shared/sticky-action-bar/StickyActionBar.stories.tsx:14
 msgid "Cancel"
 msgstr "Cancel"
@@ -33,7 +37,7 @@ msgstr "Login"
 msgid "Password"
 msgstr "Password"
 
-#: src/containers/main/MainContainer.tsx:20
+#: src/containers/main/MainContainer.tsx:26
 #: src/pages/dashboard-page/DashboardPage.tsx:6
 #: src/shared/layouts/dashboard-layouts/DashboardLayout.stories.tsx:28
 msgid "Performance Review"
@@ -47,7 +51,17 @@ msgstr "فارسی"
 msgid "Select"
 msgstr "Select"
 
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:10
+msgid "Strengths"
+msgstr "Strengths"
+
+#: src/containers/main/MainContainer.tsx:16
+msgid "Strengths and Weaknesses"
+msgstr "Strengths and Weaknesses"
+
 #: src/pages/auth/LoginForm.tsx:19
+#: src/pages/criteria-page/CriteriaForm.tsx:33
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:18
 #: src/shared/sticky-action-bar/StickyActionBar.stories.tsx:16
 msgid "Submit"
 msgstr "Submit"
@@ -59,3 +73,7 @@ msgstr "Username"
 #: src/pages/auth/Login.tsx:31
 msgid "Username or Password is incorrect."
 msgstr "Username or Password is incorrect."
+
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:14
+msgid "Weaknesses"
+msgstr "Weaknesses"
