chore: fix translation

--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -15,7 +15,7 @@ msgstr ""
 
 #: src/shared/strengths-weaknesses/StrengthsOrWeaknesses.tsx:41
 msgid "Add"
-msgstr "اضافه"
+msgstr "افزودن"
 
 #: src/shared/sticky-action-bar/StickyActionBar.stories.tsx:14
 msgid "Cancel"
