chore: add label to text-area-input in criterion-form #65

--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -60,6 +60,10 @@ msgstr "خطا"
 msgid "Evaluation"
 msgstr "ارزیابی"
 
+#: src/shared/criterion-item/CriterionItem.tsx:23
+msgid "Evidence"
+msgstr "شواهد"
+
 #: src/global-types/Evaluation.ts:13
 msgid "Exceeds Expectations"
 msgstr "فراتر از انتظارات"
