--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -60,6 +60,10 @@ msgstr "Error"
 msgid "Evaluation"
 msgstr "Evaluation"
 
+#: src/shared/criterion-item/CriterionItem.tsx:23
+msgid "Evidence"
+msgstr "Evidence"
+
 #: src/global-types/Evaluation.ts:13
 msgid "Exceeds Expectations"
 msgstr "Exceeds Expectations"
