--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -13,6 +13,10 @@ msgstr ""
 "Language-Team: \n"
 "Plural-Forms: \n"
 
+#: src/pages/guide-page/GuidePage.tsx:11
+msgid "A guide to Nonviolent Communication(NVC)"
+msgstr "راهنمای مدل NVC (ارتباط بدون خشونت)"
+
 #: src/pages/projects-page/ProjectForm.tsx:59
 msgid "Accomplishments"
 msgstr "دستاوردها"
@@ -60,6 +64,14 @@ msgstr "ارزیابی"
 msgid "Exceeds Expectations"
 msgstr "فراتر از انتظارات"
 
+#: src/containers/main/MainContainer.tsx:29
+msgid "Guide"
+msgstr "راهنما"
+
+#: src/pages/guide-page/GuidePage.tsx:11
+msgid "How to give feedback to each other?"
+msgstr "چطور به همدیگه بازخورد بدیم؟"
+
 #: src/shared/auth/Login.tsx:45
 msgid "Login"
 msgstr "ورود"
@@ -80,7 +92,7 @@ msgstr "خیر"
 msgid "Password"
 msgstr "گذرواژه"
 
-#: src/containers/main/MainContainer.tsx:33
+#: src/containers/main/MainContainer.tsx:39
 #: src/pages/dashboard-page/DashboardPage.tsx:6
 #: src/shared/full-page-error/FullPageError.stories.tsx:34
 #: src/shared/layouts/dashboard-layouts/DashboardLayout.stories.tsx:27
