--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -21,8 +21,12 @@ msgstr "راهنمای مدل NVC (ارتباط بدون خشونت)"
 msgid "Accomplishments"
 msgstr "دستاوردها"
 
+#: src/containers/main/MainContainer.tsx:24
+#: src/pages/projects-page/description/ProjectsDescriptionCard.tsx:8
+msgid "Achievements"
+msgstr "دستاوردها"
+
 #: src/pages/projects-page/AddProjectForm.tsx:31
-#: src/shared/strengths-weaknesses/StrengthsOrWeaknesses.tsx:46
 msgid "Add"
 msgstr "افزودن"
 
@@ -46,6 +50,11 @@ msgstr "معیارها"
 msgid "Delete"
 msgstr "حذف"
 
+#: src/containers/main/MainContainer.tsx:18
+#: src/pages/strengths-weaknesses-page/description/StrengthsWeaknessDescriptionCard.tsx:8
+msgid "Dominant Characteristics"
+msgstr "ویژگی‌های بارز"
+
 #: src/core/locales/languages.ts:5
 msgid "English"
 msgstr "English"
@@ -67,6 +76,10 @@ msgstr "شواهد"
 msgid "Exceeds Expectations"
 msgstr "فراتر از انتظارات"
 
+#: src/pages/criteria-page/CriteriaForm.tsx:30
+msgid "Execution"
+msgstr "اجرا"
+
 #: src/containers/main/MainContainer.tsx:30
 msgid "Guide"
 msgstr "راهنما"
@@ -74,6 +87,10 @@ msgstr "راهنما"
 #: src/pages/guide-page/GuidePage.tsx:11
 msgid "How to give feedback to each other?"
 msgstr "چطور به همدیگه بازخورد بدیم؟"
+
+#: src/pages/criteria-page/CriteriaForm.tsx:36
+msgid "Leadership"
+msgstr "رهبری خودظهور"
 
 #: src/shared/auth/Login.tsx:45
 msgid "Login"
@@ -83,6 +100,14 @@ msgstr "ورود"
 msgid "Meets Expectations"
 msgstr "مطابق با انتظارات"
 
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:24
+msgid "Most important characteristics or behaviours I should improve in myself"
+msgstr "مهمترین ویژگی ها یا رفتارهایی که باید باید توی خودم بهبودشون بدم"
+
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:18
+msgid "Most important characteristics or effective behaviours that I should maintain"
+msgstr "مهمترین ویژگی ها یا رفتارهای مؤثری که باید ادامه شون بدم"
+
 #: src/global-types/Evaluation.ts:11
 msgid "Needs Improvement"
 msgstr "نیازمند به تلاش"
@@ -91,9 +116,18 @@ msgstr "نیازمند به تلاش"
 msgid "No"
 msgstr "خیر"
 
+#: src/pages/criteria-page/CriteriaForm.tsx:24
+msgid "Organization Culture Adoption"
+msgstr "انطباق با فرهنگ سازمانی"
+
 #: src/shared/auth/LoginForm.tsx:14
 msgid "Password"
 msgstr "گذرواژه"
+
+#: src/containers/main/MainContainer.tsx:12
+#: src/pages/criteria-page/description/CriteriaDescriptionCard.tsx:8
+msgid "Performance Competencies"
+msgstr "شایستگی‌های عملکردی"
 
 #: src/containers/main/MainContainer.tsx:39
 #: src/pages/dashboard-page/DashboardPage.tsx:6
@@ -106,6 +140,14 @@ msgstr "ارزیابی عملکرد"
 msgid "Persian"
 msgstr "فارسی"
 
+#: src/pages/criteria-page/CriteriaForm.tsx:39
+msgid "Presence"
+msgstr "اثر حضور"
+
+#: src/pages/criteria-page/CriteriaForm.tsx:27
+msgid "Problem Solving"
+msgstr "حل مسئله"
+
 #: src/pages/projects-page/AddProjectForm.tsx:25
 msgid "Project"
 msgstr "پروژه‌"
@@ -117,6 +159,10 @@ msgstr "پروژه‌ها"
 #: src/pages/projects-page/ProjectForm.tsx:64
 msgid "Reviewers"
 msgstr "مرورکننده‌ها"
+
+#: src/shared/criterion-item/CriterionItem.stories.tsx:19
+msgid "Role Expertise and Self Development"
+msgstr "مرجعیت تخصصی"
 
 #: src/shared/rating/Rating.stories.tsx:15
 #: src/shared/rating/Rating.stories.tsx:25
@@ -146,7 +192,7 @@ msgstr "بسیار فراتر از انتظارات"
 
 #: src/core/snackbar/Snackbar.stories.tsx:16
 #: src/core/snackbar/Snackbar.stories.tsx:26
-#: src/pages/criteria-page/CriteriaForm.tsx:37
+#: src/pages/criteria-page/CriteriaForm.tsx:44
 #: src/pages/projects-page/ProjectForm.tsx:73
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:29
 #: src/shared/auth/LoginForm.tsx:19
@@ -169,6 +215,10 @@ msgstr "با موفقیت ثبت گردید."
 msgid "Superb"
 msgstr "فوق‌العاده"
 
+#: src/pages/criteria-page/CriteriaForm.tsx:33
+msgid "Thought Leadership"
+msgstr "مرجعیت تخصصی"
+
 #: src/shared/error/OverlayError.tsx:9
 msgid "Try Again"
 msgstr "تلاش مجدد"
@@ -181,9 +231,17 @@ msgstr "نام کاربری"
 msgid "Username or Password is incorrect."
 msgstr "نام کاربری یا گذرواژه اشتباه است."
 
-#: src/shared/strengths-weaknesses/StrengthsOrWeaknesses.tsx:54
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:18
+msgid "What I'm awesome at"
+msgstr "تو چی خفنم"
+
+#: src/shared/strengths-weaknesses/StrengthsOrWeaknesses.tsx:43
 msgid "What else"
 msgstr "دیگه چی"
+
+#: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:24
+msgid "What to improve"
+msgstr "چیمو بهبود بدم"
 
 #: src/shared/confirm-button/ConfirmButton.tsx:8
 msgid "Yes"
