fix: minor fixes

--- a/src/pages/guide-page/Content.mdx
+++ b/src/pages/guide-page/Content.mdx
@@ -21,8 +21,8 @@
 
 دایره لغات ما برای بیان نیازهامون هم کمه و این باعث میشه نتونیم پیاممون رو درست منتقل کنیم. برای خوبه یه لیستی از نیازها هم دم دستمون داشته باشیم:
 
-- **نمونه نیازهای روانی: **
-  احترام، استقلال، اصالت، اطمینان خاطر، اعتماد، امنیت روانی، پذیرش، تعلق، تفریح، توجه، حمایت، خلاقیت، صداقت، صمیمیت، فهم، قدردانی، کمال، محبت، معنی، نظم، هماهنگی، همدلی، همکاری
+**نمونه نیازهای روانی: **
+احترام، استقلال، اصالت، اطمینان خاطر، اعتماد، امنیت روانی، پذیرش، تعلق، تفریح، توجه، حمایت، خلاقیت، صداقت، صمیمیت، فهم، قدردانی، کمال، محبت، معنی، نظم، هماهنگی، همدلی، همکاری
 
 ###### ۴. یه راه حل پیشنهاد کن.
 
