--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -39,10 +39,6 @@ msgstr "افزودن پروژه"
 msgid "Are you sure you want to delete this project review?"
 msgstr "آیا از حذف  این پروژه مطمین هستید؟"
 
-#: src/containers/main/MainContainer.tsx:12
-msgid "Beginning"
-msgstr "سرآغاز"
-
 #: src/shared/sticky-action-bar/StickyActionBar.stories.tsx:14
 msgid "Cancel"
 msgstr "لغو"
@@ -50,6 +46,10 @@ msgstr "لغو"
 #: src/shared/full-page-error/FullPageError.stories.tsx:9
 msgid "Criteria"
 msgstr "معیارها"
+
+#: src/containers/main/MainContainer.tsx:12
+msgid "Dashboard"
+msgstr "پیشخوان"
 
 #: src/pages/projects-page/ProjectForm.tsx:69
 msgid "Delete"
