--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -86,6 +86,10 @@ msgstr "Exceeds Expectations"
 msgid "Execution"
 msgstr "Execution"
 
+#: src/pages/dashboard-page/FinalSubmission.tsx:41
+msgid "Finish and send review"
+msgstr "Finish and send review"
+
 #: src/pages/dashboard-page/AchievementsNoProjects.tsx:8
 msgid "Go to Achievements page and add projects you have participated in"
 msgstr "Go to Achievements page and add projects you have participated in"
@@ -143,6 +147,10 @@ msgstr "Needs Improvement"
 #: src/shared/confirm-button/ConfirmButton.tsx:8
 msgid "No"
 msgstr "No"
+
+#: src/pages/dashboard-page/FinalSubmission.tsx:41
+msgid "Once you finish the process and submit forms, you wouldn't be able to edit forms and forms will be sent to us. Are you sure?"
+msgstr "Once you finish the process and submit forms, you wouldn't be able to edit forms and forms will be sent to us. Are you sure?"
 
 #: src/pages/criteria-page/CriteriaForm.tsx:27
 msgid "Organization Culture Adoption"
@@ -209,6 +217,7 @@ msgstr "Select"
 
 #: src/core/snackbar/Snackbar.stories.tsx:24
 #: src/pages/criteria-page/CriteriaPage.tsx:55
+#: src/pages/dashboard-page/FinalSubmission.tsx:28
 #: src/pages/projects-page/ProjectsPage.tsx:44
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesPage.tsx:61
 msgid "Something went wrong."
