feat: add text and improve code

--- a/src/pages/start-review-page/Content.mdx
+++ b/src/pages/start-review-page/Content.mdx
@@ -1,7 +1,11 @@
-لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
-بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
-هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و
-متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ
-پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط
-سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود
-طراحی اساسا مورد استفاده قرار گیرد.
+پرسشنامه‌هایی که در پیش داریم، فقط ارزیابی شما از خودتونه و سه مرحله داره که هر مرحله حدود ۱۰ دقیقه از شما وقت می‌گیره و نیاز به تمرکز داره:  
+
+
+>**مرحله‌ی ۱:** خودتون رو در ۶ شایستگی ارزیابی کنید. این شایستگی‌ها برگرفته از ارزیابی عملکرد گوگل می‌باشد.  
+>
+>**مرحله‌ی ۲:** نقاط قوت و ضعفتون رو ذکر می‌کنید.    
+>
+>**مرحله‌ی ۳:** دستاوردها و افرادی که قراره شما رو بررسی کنند مشخص کنید.    
+
+
+تکمیل کردن این پرسشنامه‌ها نهایت ۳۰ دقیقه از شما وقت می‌گیره. ممنونت می‌شم وقت بذاری و اونا رو تکمیل کنی. ضمنا می‌تونی هر وقت خواستی بخشی از پرسشنامه‌ها رو ذخیره کنی و بعدا دوباره به تکمیل کردنشون بپردازی.
