chore: change texts in tabs

--- a/src/pages/criteria-page/ExecutionContent.mdx
+++ b/src/pages/criteria-page/ExecutionContent.mdx
@@ -1,1 +1,1 @@
-انجام کار با کیفیت با حداقل راهنمایی. برنامه‌ریزی و زمان بندی. حفظ توازن سرعت و دقت. قدرت تحلیل الگوریتمی. مستند سازی و ارتباط نوشتاری واضح، منسجم و دقیق. حجم کار Done شده.
+کیفیت کارتون چطوره؟ برنامه و زمانبندی‌ها‌تون چطور؟ سرعت، دقت، نظم و تمرکز کافی رو در انجام کارهاتون دارید؟ اهل مستندسازی و مدیریت دانش‌هستید؟ آیا به خروجی مورد انتظار می‌رسید؟
