--- a/src/pages/criteria-page/LeadershipContent.mdx
+++ b/src/pages/criteria-page/LeadershipContent.mdx
@@ -1,1 +1,1 @@
-گرفتن هدایت مسئله‌ها و پروژه‌ها. پذیرفتن مسئولیت نتایج. Proactiveبودن.
+چقدر اهل بر عهده گرفتن مسئولیت کارهای مهم و هدایت و راهبری آن‌ها در تیم  و پذیرفتن نتایج آن (مطلوب یا نا مطلوب) هستید؟
