--- a/src/pages/criteria-page/ProblemSolvingContent.mdx
+++ b/src/pages/criteria-page/ProblemSolvingContent.mdx
@@ -1,1 +1,1 @@
-تحقیق و تحلیل با هدف اشراف بر موضوع. تفکر خلاق. ارائه‌ی پیشنهاد راه حل قابل اجرا و چابک. بررسی راه حل‌های جایگزین. تصمیم گیری.
+در مواجهه با مسائل جدید چطور عمل می‌‎کنید؟ (مثلاً: تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین و ارائه راه‌حل قابل اجرا و سپس تصمیم‌گیری)
