--- a/src/pages/criteria-page/ThoughtLeadershipContent.mdx
+++ b/src/pages/criteria-page/ThoughtLeadershipContent.mdx
@@ -1,1 +1,1 @@
-یادگیری در رشد فردی. احاطه بر دانش تخصصی. آشنایی با ابزارهای کاربردی. انتخاب و تمرکز بر یک زمینه‌ی تخصصی.
+چقدر در حوزه‌ی مربوط به خودتون به عنوان یک متخصص به شما رجوع میشه؟ چقدر دیگران برای به‌‌دست‌آوردن دانش به‌روز از شما کمک می‌گیرند؟ چقدر در مورد ابزارهایی که تسلط دارید، از شما سوال می‌پرسند؟
