--- a/src/pages/guide-page/Content.mdx
+++ b/src/pages/guide-page/Content.mdx
@@ -7,7 +7,7 @@
 
 ###### ۲. حسی که بهت دست داد رو بیان کن
 
-توی این مرحله مهمه که بر اساس مشاهده‌ای که داشتی، بگی چه حسی بهت دست داده. احساسات میتونه مثبت باشه یا منفی. یکی از نواقص برقراری ارتباط‌های معمولی اینه که نمی‌تونیم احساساتمون رو به هم منتقل کنیم. چون دامنه لغاتمون برای بیان احساسات کمه و به همین دلیل پیاممون منتقل نمیشه. تصور کنید به جای اینکه بگیم: "حس بدی میکنم" ، بگیم: "حس کلافگی میکنم" مورد دوم خیلی دقیق‌تره و طرف مقابل رو نسبت به کاری که میتونه انجام بده هوشیارتر میکنه. برای همین خوبه که لیستی از احساسات مثبت و منفی رو داشته باشیم و ازشون توی ارائه بازخورد استفاده کنیم:
+توی این مرحله مهمه که بر اساس مشاهده‌ای که داشتی، بگی چه حسی بهت دست داده. احساسات میتونه مثبت باشه یا منفی. یکی از نواقص برقراری ارتباط‌های معمولی اینه که نمی‌تونیم احساساتمون رو به هم منتقل کنیم. چون دامنه لغاتمون برای بیان احساسات کمه و به همین دلیل پیاممون منتقل نمیشه. تصور کنید به جای اینکه بگیم: "حس بدی میکنم"، بگیم: "حس کلافگی میکنم" مورد دوم خیلی دقیق‌تره و طرف مقابل رو نسبت به کاری که میتونه انجام بده هوشیارتر میکنه. برای همین خوبه که لیستی از احساسات مثبت و منفی رو داشته باشیم و ازشون توی ارائه بازخورد استفاده کنیم:
 
 - **نمونه احساسات مثبت: **
   اشتیاق، اطمینان، اعتماد به نفس، افتخار، امیدواری، آرامش، آگاهی، بااستعدادی، باذوقی، با روحیه بودن، بالغ بودن، بشاش بودن، پرانرژی بودن، تواضع، ثبات، جدیت، قدردانی، خاطرجمعی، خوش‌خلقی، خوش‌بینی، دلگرم بودن، راحتی، رضایت، سرحالی، سودمندی، شگفت‌زدگی، صمیمیت، عجین بودن، عزت نفس، غرور، فعال بودن، کامیابی، کنجکاوی، گشاده‌رویی، مفید بودن، وفاداری، وقار، هوشمندی، یاری‌رسانی
@@ -30,7 +30,7 @@
 
 ###### و اما چند مثال ...
 
-مثال نادرست بازخورد منفی: تو کار رو دیر رسوندی چون آدم بی نظمی هستی.  
+مثال نادرست بازخورد منفی: تو کار رو دیر رسوندی چون آدم بی‌نظمی هستی.  
  مثال درست بازخورد مثبت: قرار بود کار رو فلان موقع برسونی اما نرسید. من از این اتفاق احساس کلافگی کردم چون نیازم به هماهنگی برآورده نشد. ازت میخوام اگه قرار کاری با تأخیر برسه زودتر به هم تیمیات اطلاع بدی.
 
 مثال نادرست بازخورد مثبت: توی فلان کار خوبی.  
