--- a/src/pages/projects-page/DescriptionContent.mdx
+++ b/src/pages/projects-page/DescriptionContent.mdx
@@ -1,9 +1,1 @@
-
-توی این بخش تمرکزمون میخواد روی دستاورد ها و اثری که طی یک سال گذشته روی پروژه‌ها داشتیم باشه. برای همین از
-لیست پروژه‌ها، اونهایی که توش مشارکت داشتیم رو انتخاب می‌کنیم و نقش و دستاوردی که توی اون داشتیم رو توضیح
-میدیم. توی نوشتن دستاورد با توجه به اینکه به مباحث رفتاری یا شایستگی‌ها، توی بخش های قبل پرداختیم؛ حتما به
-صورت عینی و مشخص به کاری که انجام دادیم و نقشمون توی پیشرفت پروژه بپردازیم.  
-در ادامه اثر نقشمون در پروژه رو رتبه بندی می‌کنیم.  
-در آخر هم همکارایی که میخواهیم عملکردمون رو مرور کنن رو به تفکیک هر پروژه انتخاب میکنیم تا توی مرحله‌ی بعد
-عملکردمون رو مرور کنن.  
-(این بخش توسط همکارانی که مرورمون می کنن و مدیر مستقیمون قابل مشاهده است.)
+اطلاعات ارزیابی عملکرد و دستاوردهای هر پروژه، توسط مدیر مستقیم و کسانیکه شما به عنوان بررسی‌کننده‌ی آن پروژه مشخص می‌کنید؛ دیده می‌شوند.
