--- a/src/pages/strengths-weaknesses-page/DescriptionContent.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContent.mdx
@@ -1,7 +1,3 @@
-توی یک سال گذشته هر کدوم از ما ویژگی های مفید و مثبتی از خودمون نشون دادیم که وقتی به گدشته نگاه میکنیم نقاط
-قوت رفتاریمون هستن و علاقمند هستیم این رفتارها یا ویژگی ها رو ادامه بدیم یا حتی تقویت کنیم. از طرفی
-رفتارهایی داشتیم که شاید با نگاه به گذشته و اثرات اونها، به نظرمون بیاد که باید این رفتارها رو کنار بذاریم
-یا روی اون ویژگیمون کار کنیم که اثرات منفی توی عملکردمون نداشته باشه.  
-توی این بخش حداکثر ۳ تا مهمترین ویژگی یا رفتاری که باید ادامه شون بدیم و حداکثر ۳ تا مهمترین ویژگی یا رفتاری
-که باید توی خودمون بهبود بدیم تا عملکردمون تقویت بشه رو می نویسیم.  
-(این بخش فقط توسط مدیر مستقیممون قابل مشاهده است)
+توی یک سال گذشته هر کدوم از ما ویژگی های مفید و مثبتی از خودمون نشون دادیم که احتمالاً نقاط قوت رفتاری‌مون هستن و علاقه‌مندیم این رفتارها یا ویژگی‌ها رو **ادامه بدیم و تقویت کنیم**. از طرفی رفتارهایی داشتیم که شاید با نگاه به گذشته و اثراتشون، پی به این ببریم که باید این رفتارها رو کنار بذاریم.  
+توی این بخش حداکثر ۳ تا از مهمترین ویژگی‌ها یا رفتارها رو برای هردو بخش ذکر کنید.  
+**(این بخش فقط توسط مدیر مستقیم شما قابل مشاهده است.)**
