--- a/src/pages/criteria-page/DescriptionContent.mdx
+++ b/src/pages/criteria-page/DescriptionContent.mdx
@@ -1,2 +1,2 @@
-توی این بخش قراره توی ۶ شایستگی به خودمون رتبه بدیم و شواهدی که مؤید رتبه‌ی مد نظرمون هست رو بنویسیم.  
-(این بخش فقط توسط مدیر مستقیممون قابل مشاهده است)  
+توی ۶ شایستگی، خودتون رو در ۴ سطح ارزیابی کنید و **شواهدی** که نشان‌دهنده‌ی ارزیابی شما از خودتونه رو به کمک راهنمای مدل NVC بنویسید.  
+**(این بخش فقط توسط مدیر مستقیم شما قابل مشاهده است)**
