--- a/src/pages/strengths-weaknesses-page/DescriptionContent.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContent.mdx
@@ -1,3 +1,3 @@
-توی یک سال گذشته هر کدوم از ما ویژگی های مفید و مثبتی از خودمون نشون دادیم که احتمالاً نقاط قوت رفتاری‌مون هستن و علاقه‌مندیم این رفتارها یا ویژگی‌ها رو **ادامه بدیم و تقویت کنیم**. از طرفی رفتارهایی داشتیم که شاید با نگاه به گذشته و اثراتشون، پی به این ببریم که باید این رفتارها رو کنار بذاریم.  
+توی یک سال گذشته هر کدوم از ما ویژگی‌های مفید و مثبتی از خودمون نشون دادیم که احتمالاً نقاط قوت رفتاری‌مون هستن و علاقه‌مندیم این رفتارها یا ویژگی‌ها رو **ادامه بدیم و تقویت کنیم**. از طرفی رفتارهایی داشتیم که شاید با نگاه به گذشته و اثراتشون، پی به این ببریم که باید این رفتارها رو کنار بذاریم.  
 توی این بخش حداکثر ۳ تا از مهمترین ویژگی‌ها یا رفتارها رو برای هردو بخش ذکر کنید.  
 **(این بخش فقط توسط مدیر مستقیم شما قابل مشاهده است.)**
